# volsd

./: .gitignore  CMakeLists.txt  CMakeLists.txt.dev  CMakeLists.txt.prod  CMakeLists.txt.production  README.md  makefile
conf/: Config.h.in  DispatcherConfig.h.in  config.example  dispatcher.cfg  server.conf  sync.cfg  volsd-client.conf
doc/: README.md  RoadMap.txt  volumes.bk
include/: ClientSocket.h  Disk.h  Disks.h  Logger.h  ServerSocket.h  Snapshots.h  Socket.h  Sync.h  Utils.h  Volumes.h
scripts/: volsd.init
src/: ClientSocket.cpp  Disk.cpp  Disks.cpp  Logger.cpp  ServerSocket.cpp  Snapshots.cpp  Socket.cpp  Sync.cpp  Utils.cpp  Volumes.cpp  client.cpp  dispatcher.cpp  manager.cpp  sync.cpp  volumesd-client.cpp  volumesd.cpp
